# rag-chunking-pipeline

./: .gitignore  README.md  plan.txt  pyproject.toml
.github/workflows/: quality-gates.yml
artifacts/: deepeval_gate_report.json  doc_hashes.json  documents.jsonl  eval_report.json  eval_report.md  rag_analysis_report.txt  run_manifest.json
src/rag_chunker/: __init__.py  __main__.py  augment.py  chunking.py  cleaning.py  cli.py  deepeval_cli.py  deepeval_gates.py  eval_cli.py  evaluator.py  io.py  metadata.py  pipeline.py
src/rag_chunker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rag_chunker/config/: __init__.py  deepeval_gate_config.py  eval_config.py  pipeline_config.py
src/rag_chunker/domain/: __init__.py  models.py
src/rag_chunker/infrastructure/: __init__.py  io.py
src/rag_chunker/interfaces/: cli.py  deepeval_cli.py  eval_cli.py
src/rag_chunker/use_cases/: augment.py  chunking.py  cleaning.py  deepeval_gates.py  evaluator.py  metadata.py
src/rag_chunker/use_cases/services/: __init__.py  artifact_evaluation_service.py  block_loader_service.py  chunk_assembly_service.py  chunking_service.py  deepeval_gate_service.py  global_chunk_dedupe_service.py  incremental_cache_service.py  segment_merge_service.py  structure_resolver_service.py  tiny_chunk_sweep_service.py
tests/: test_augment.py  test_chunking.py  test_cleaning.py  test_content_coverage.py  test_deepeval_gates.py  test_e2e_pipeline.py  test_evaluator.py  test_metadata.py  test_pipeline_quality.py
