[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-chunker"
version = "0.1.0"
description = "MinerU-aware deterministic chunking pipeline for RAG."
requires-python = ">=3.11"
dependencies = ["tiktoken>=0.7.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "deepeval>=3.8,<4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
